--- a/FernetVol2.html
+++ b/FernetVol2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Cómo preparo el mejor fernet?</title>
-    <link rel="stylesheet" href="/Nueva carpeta/FernetVol2.css">
+    <link rel="stylesheet" href="FernetVol2.css">
     <link rel="icon" href="/Nueva carpeta/monophy.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
