--- a/FernetVol2.html
+++ b/FernetVol2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Cómo preparo el mejor fernet?</title>
     <link rel="stylesheet" href="FernetVol2.css">
-    <link rel="icon" href="/Nueva carpeta/monophy.gif">
+    <link rel="icon" href="monophy.gif">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
