--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="container">
         <div>
             <img class="cortana" src="cortana.png" alt="Asistente">
+            <div class="dialogBox">
+                <span>Hola, estoy aquí para ayudarte a preparar el Fernet perfecto.</span>
+            </div>
         </div>
         <div class="preguntas">
             <h3>Introduzca la capacidad de su recipiente</h3>
