--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         <img class="frn" src="FONDO.png" alt="">
         <p>Hacé click <a href="https://www.youtube.com/watch?v=LhFYIw8_fcA" target="_blank">aquí</a> para ver cómo se hace.</p>
     </div>
+    <div class="tutorial">
+        <img class="frn" src="abogado.jfif" alt="Señor serio.">
+        <p>No nos olvidemos que todo tiene su origen... 
+            un poquito de <a href="https://es.wikipedia.org/wiki/Fernet#Historia" target="_blank">historia</a> no nos viene mal.
+        </p>
+    </div>
     <script src="FernetVol2.js"></script>
 </body>
 </html>
