--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
     </div>
     <div class="tutorial">
-        <img class="frn" src="FONDO.png" alt="">
+        <img class="frn" src="FONDO.png" alt="Fernet.">
         <p>Hacé click <a href="https://www.youtube.com/watch?v=LhFYIw8_fcA" target="_blank">aquí</a> para ver cómo se hace.</p>
     </div>
     <div class="tutorial">
