Agregado de boton de gato

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <p>No nos olvidemos que todo tiene su origen... 
             un poquito de <a href="https://es.wikipedia.org/wiki/Fernet#Historia" target="_blank">historia</a> no nos viene mal.
         </p>
+        <button class="gatito"> <img src="gatoBoton.jpg" alt="¿Qué es esto?"> </button>
     </div>
+
     <script src="FernetVol2.js"></script>
 </body>
 </html>
