gato boton arreglado

--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
         </div>
         
     </div>
-    <div class="tutorial">
+    <div class="tutoriales">
+        <div class="tutorial">
         <img class="frn" src="FONDO.png" alt="Fernet.">
         <p>Hacé click <a href="https://www.youtube.com/watch?v=LhFYIw8_fcA" target="_blank">aquí</a> para ver cómo se hace.</p>
-    </div>
-    <div class="tutorial">
+     </div>
+     <div class="tutorial">
         <img class="frn" src="abogado.jfif" alt="Señor serio.">
         <p>No nos olvidemos que todo tiene su origen... 
             un poquito de <a href="https://es.wikipedia.org/wiki/Fernet#Historia" target="_blank">historia</a> no nos viene mal.
         </p>
+        </div>
         <button class="gatito"> <img src="gatoBoton.jpg" alt="¿Qué es esto?"> </button>
     </div>
 
