agrega boton gato html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             un poquito de <a href="https://es.wikipedia.org/wiki/Fernet#Historia" target="_blank">historia</a> no nos viene mal.
         </p>
         </div>
+    <div class="cat">
+        <a href="https://www.youtube.com/watch?v=LiaYDPRedWQ" target="_blank">
+            <img src="gato-user.png" alt="¿un gato?" class="kiti">
+        </a>
+    </div>
         
     <script src="FernetVol2.js"></script>
 </body>
