--- a/index.html
+++ b/index.html
@@ -74,15 +74,39 @@
             <button id="cierro" class="btn">CERRAR</button>
             <button class="btn">QUIERO VER!</button>
         </div>
-    </dialog>  
+    </dialog>
+    
+    <h2>Estudios recientes revelaron que la mejor forma de preparar un Fernet, es contando el tiempo que se vierte la bebida en el vaso.
+        Por eso, implementamos nuevos temporizadores para que encuentres tu medida ideal: 
+    </h2>
+    <div class="timer">    
+        <div class="temporizador">
+            <h3>Suave</h3>
+            <div class="counter" id="counter-suave"></div>
+            <button class="botonL" id="suave">Iniciar</button>
+            <button class="botonL" id="pausa1">Pausar</button>
+        </div>
+        <div class="temporizador">
+            <h3>Tranca</h3>
+            <div class="counter" id="counter-tranca"></div>
+            <button class="botonL" id="tranca">Iniciar</button>
+            <button class="botonL" id="pausa2">Pausar</button>
+        </div>
+        <div class="temporizador">
+            <h3>Fuertazo</h3>
+            <div class="counter" id="counter-fuerte"></div>
+            <button class="botonL" id="fuerte">Iniciar</button>
+            <button class="botonL" id="pausa3">Pausar</button>
+        </div>
+    </div>
+    <h4>Sentite libre de pausar cuando desees, nadie te juzga... O si...</h4>  
     <hr>
     <footer>    
         <p>Hola, Soy Mati.</p>
         <p>Este es mi primer proyecto de desarrollo web, espero lo disfrutes.</p>
         <p>Me gustaría conocer tu opinión.</p>
         <p>gimenezmati29@gmail.com</p>
-    </footer>
-      
- <script src="FernetVol2.js"></script>
+    </footer> 
+<script src="FernetVol2.js"></script>
 </body>
 </html>
