--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             un poquito de <a href="https://es.wikipedia.org/wiki/Fernet#Historia" target="_blank">historia</a> no nos viene mal.
         </p>
     </div>
+    
     <div class="cat">
         <a id="kiti">
             <img src="gato-user.png" alt="¿un gato?" class="kiti">
@@ -81,22 +82,15 @@
     </h2>
     <div class="timer">    
         <div class="temporizador">
-            <h3>Suave</h3>
-            <div class="counter" id="counter-suave"></div>
-            <button class="botonL" id="suave">Iniciar</button>
-            <button class="botonL" id="pausa1">Pausar</button>
-        </div>
-        <div class="temporizador">
-            <h3>Tranca</h3>
+            <!-- <h3>Tranca</h3> -->
+            <div class="botonera">
+                <button class="botones" id="selectSuave">Suave</button>
+                <button class="botones" id="selectTranca">Tranca</button>
+                <button class="botones" id="selectFuerte">Fuertazo</button>
+            </div>
             <div class="counter" id="counter-tranca"></div>
             <button class="botonL" id="tranca">Iniciar</button>
             <button class="botonL" id="pausa2">Pausar</button>
-        </div>
-        <div class="temporizador">
-            <h3>Fuertazo</h3>
-            <div class="counter" id="counter-fuerte"></div>
-            <button class="botonL" id="fuerte">Iniciar</button>
-            <button class="botonL" id="pausa3">Pausar</button>
         </div>
     </div>
     <h4>Sentite libre de pausar cuando desees, nadie te juzga... O si...</h4>  
