Soluciono error de timers

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             </p>
         </div>
 
-        <div class="tutorial1" id="tiposDeGatos">
+        <div class="tutorial1" id="tiposDeGatos" >
             <a>
-                <img src="gato-user.png" alt="¿un gato?" class="kiti">
+                <img src="gato-user.png" alt="¿un gato?" class="kiti" id="kiti">
             </a>
             <p>Quisieras conocer qué tipo de gato sos?</p>
         </div>
