--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
             <div id="lista-tiempos"></div>
         </div>
     </div>
-    
+    <div>
+        <a class="botones" href="cortana.png" download="cortana">Descargar foto cortana</a>
+    </div>
     <hr>
     <footer>    
         <p>Hola, Soy Mati.</p>
